--- a/index.html
+++ b/index.html
@@ -30,8 +30,21 @@
             </div>
         </div>
     </section>
+    <div id="modalContato" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Insira seus Dados</h2>
+            <form id="contatoForm">
+                <input type="text" id="nome" placeholder="Nome" required>
+                <input type="email" id="endereco" placeholder="Endereço" required>
+                <input type="tel" id="telefone" placeholder="Telefone" required>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </div>
     <footer>
         <p>Desenvolvido por Eduardo Montiel</p>
+        <script src="controle.js"></script>
     </footer>
 </body>
 </html>
